color CSV output

--- a/table-template.html
+++ b/table-template.html
@@ -44,7 +44,6 @@
             }
 
             .table-container {
-                background-color: red;
                 width: 100vw;
             }
 
@@ -55,14 +54,28 @@
                 padding: 2px;
             }
 
+            .bg-red {
+                background-color: red;
+            }
+
+            .bg-orange {
+                background-color: orange;
+            }
+
+            .bg-yellow {
+                background-color: yellow;
+            }
+
 
 
         </style>
 
-        <script src="test.js"></script>
 
     </head>
 
     <body>
 
+        <!-- REPLACE ME -->
 
+    </body>
+</html>
