add padding to select

--- a/table-template.html
+++ b/table-template.html
@@ -64,6 +64,11 @@
                 outline: 1px solid black;
             }
 
+            .select-div {
+                padding-top: 20px;
+                padding-bottom: 20px;
+            }
+
         </style>
 
         <script>
@@ -75,6 +80,7 @@
 
     <body>
 
+    <div class="select-div">
         <label for="outcome-filter-dropdown">Show outcome: </label>
         <select name="outcome-filter" id="outcome-filter-dropdown">
             <option value="all">All</option>
@@ -83,6 +89,7 @@
             <option value="fail">Only fail</option>
 
         </select>
+    </div>
 
         <!-- REPLACE WITH TABLE -->
 
