--- a/table-template.html
+++ b/table-template.html
@@ -43,7 +43,7 @@
             }
 
             .data-div {
-                overflow-wrap: anywhere;
+                overflow-wrap: break-word;
                 overflow: scroll;
                 padding: 2px;
             }
@@ -68,6 +68,12 @@
                 padding-top: 20px;
                 padding-bottom: 20px;
             }
+
+
+            td.break-anywhere div {
+                overflow-wrap: anywhere;
+            }
+
 
         </style>
 
