simplify table.py

--- a/table-template.html
+++ b/table-template.html
@@ -42,21 +42,21 @@
                 background-color: #afafaf;
             }
 
-            .data-div {
+            .cell div {
                 overflow-wrap: break-word;
                 overflow: scroll;
                 padding: 2px;
             }
 
-            .bg-red {
+            .cell-fail {
                 background-color: red;
             }
 
-            .bg-orange {
+            .cell-timeout {
                 background-color: orange;
             }
 
-            .bg-yellow {
+            .cell-completed {
                 background-color: yellow;
             }
 
