--- a/table-template.html
+++ b/table-template.html
@@ -130,6 +130,10 @@
                 font-weight: bold;
             }
 
+            .th-index {
+                cursor: pointer;
+            }
+
 
 
 
