change input to textarea

--- a/table-template.html
+++ b/table-template.html
@@ -170,7 +170,7 @@
     <div class="filter-text-div">
 
         <label for="filter-text-input">Search: </label>
-        <input type="text" id="filter-text-input">
+        <textarea type="text" id="filter-text-input"></textarea>
 
         <div class="sep"></div>
 
