renaming, add "completed but different" regression

--- a/table-template.html
+++ b/table-template.html
@@ -69,6 +69,10 @@
                 background-color: #5c5cff;
             }
 
+            .cell-completed-different {
+                background-color: #ff00ff;
+            }
+
             .select-div {
                 padding-top: 20px;
                 padding-bottom: 20px;
@@ -162,6 +166,7 @@
             <option value="problem">Problems</option>
             <option value="fail">Fails</option>
             <option value="timeout">Timeouts</option>
+            <option value="completed-different">Completed but different</option>
             <option value="hash">Bad hashes</option>
             <option value="no-problem">No problems</option>
         </select>
