--- a/table-template.html
+++ b/table-template.html
@@ -53,7 +53,7 @@
             }
 
             .cell-fail {
-                background-color: red;
+                background-color: #ff0000;
             }
 
 
@@ -69,7 +69,7 @@
                 background-color: #5c5cff;
             }
 
-            .cell-completed-different {
+            .cell-diverging-result {
                 background-color: #ff00ff;
             }
 
@@ -101,7 +101,7 @@
             }
 
             .cell-new-completed {
-                background-color: #ffff80;
+                background-color: #999900;
 
             }
 
@@ -165,8 +165,8 @@
             <option value="all">All</option>
             <option value="problem">Problems</option>
             <option value="fail">Fails</option>
+            <option value="diverging-result">Diverging results</option>
             <option value="timeout">Timeouts</option>
-            <option value="completed-different">Completed but different</option>
             <option value="hash">Bad hashes</option>
             <option value="no-problem">No problems</option>
         </select>
