fix table for Chrome etc

--- a/table-template.html
+++ b/table-template.html
@@ -13,6 +13,7 @@
 
             body {
                 width: 100vw;
+                font-family: Noto-Serif;
             }
 
             table {
@@ -44,7 +45,7 @@
 
             .cell div {
                 overflow-wrap: break-word;
-                overflow: scroll;
+                //overflow: scroll;
                 padding: 2px;
             }
 
