--- a/table-template.html
+++ b/table-template.html
@@ -4,6 +4,10 @@
         <title>MCGS Test Output</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
         <style>
             * {
                 box-sizing: border-box;
@@ -13,7 +17,7 @@
 
             body {
                 width: 100vw;
-                font-family: Noto-Serif;
+                font-family: "Noto Serif";
             }
 
             table {
