--- a/table-template.html
+++ b/table-template.html
@@ -40,7 +40,7 @@
             }
 
             tr:nth-child(odd) {
-                //background-color: #d8d8d8;
+                /*background-color: #d8d8d8;*/
                 background-color: #e6e6e6;
             }
 
@@ -49,7 +49,7 @@
 
             .cell div {
                 overflow-wrap: break-word;
-                //overflow: scroll;
+                /*overflow: scroll;*/
                 padding: 2px;
             }
 
@@ -101,7 +101,7 @@
             }
 
             .cell-new-pass {
-                //background-color: #66ff66;
+                /*background-color: #66ff66;*/
                 background-color: #004d00;
             }
 
