create-table: warn for diverging tests, include in .html. Fix bug

--- a/src/table-template.html
+++ b/src/table-template.html
@@ -139,6 +139,11 @@
                 font-weight: bold;
             }
 
+            #python-warnings ul {
+                list-style-type: square;
+                padding-left: 1em;
+            }
+
             .th-index {
                 cursor: pointer;
             }
@@ -157,6 +162,7 @@
         <!-- REPLACE WITH METADATA -->
 
     <p id="problem-summary"></p>
+    <!-- REPLACE WITH PYTHON WARNINGS -->
 
     <div class="select-div">
         <label for="outcome-filter-dropdown">Show rows: </label>
