implement "sort by time" in HTML output

--- a/src/table-template.html
+++ b/src/table-template.html
@@ -153,6 +153,9 @@
                 background-color: #ffb0ff;
             }
 
+            #data-table {
+                visibility: hidden;
+            }
 
         </style>
 
@@ -204,6 +207,11 @@
         <select id="filter-text-column-select">
             <!-- REPLACE WITH COLUMN OPTIONS -->
         </select>
+
+        <div class="sep"></div>
+
+        <label for="sort-by-time-checkbox">Sort by time</label>
+        <input type="checkbox" id="sort-by-time-checkbox">
 
     </div>
 
