clean up options

--- a/MCGS.html
+++ b/MCGS.html
@@ -5,7 +5,7 @@
 
         <script>
             Module = {
-                arguments: ["--print-ttable-size", "[clobber_1xn] XO {B}"]
+                arguments: ["--print-ttable-size", "[]"]
             };
         </script>
 
